--- a/src/app/hello/hello.component.html
+++ b/src/app/hello/hello.component.html
@@ -1,3 +1,19 @@
+<body>
+    
+<div [hidden]='display'>
 <h2>{{msg}}</h2>
 <h3>{{loc}}</h3>
 <h4>{{schedule}}</h4>
+<h1>{{count}}</h1>
+</div>
+<button [disabled]="isDisabled">Next</button>
+<button [style.color]="isSpecial ? 'red' : 'green' ">Red</button>
+<button [style.background-color]= "canSave ? 'cyan' : 'grey'" >Save</button>
+
+<div [class] ='stylename'>
+    <p>Some Text goes here</p>
+</div>
+
+
+
+</body>
