--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
   <h1>
     Welcome to {{ title }}!
   </h1>
   <h2>{{msg}}</h2>
-
-  <app-hello></app-hello>
+  <app-contact></app-contact>
+  
 </div>
