--- a/src/app/hello/hello.component.css
+++ b/src/app/hello/hello.component.css
@@ -1,7 +1,7 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:lightcoral;
-    font-size: 12px;
+    color:rgb(1, 81, 95);
+    font-size: 18px;
 }
 
 .s1{
