subscribe to data in contact changes made are reflected by subscribe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     Welcome to {{ title }}!
   </h1>
   <h2>{{msg}}</h2>
+  <!-- <app-hello></app-hello> -->
   <app-contact></app-contact>
+
   
 </div>
